resources/css/footer.css
@media screen {
	footer {
		position: fixed;
		bottom: 2px;
		background-color: #A3A3A3;
		height: 20px;
		padding-top: 5px;
		font-size: 0.8em;
	}
}

@media screen and (min-width: 800px) {
	footer {
		width: 800px;
		border-radius: 5px;
		box-shadow: 5px 5px 6px #363636;
	}
}	

@media screen and (max-width: 800px) {
	footer {
		width: 100%;
	}
}


.validation {
	position: absolute;
	padding-left: 5px;
	color: #E0E0E0;
	z-index: 1;
}

.center {
	position: absolute;
	color: #E0E0E0;
	width: 100%;
	text-align: center;
	z-index: 0;
}

.right {
	position: absolute;
	right: 5px;
	text-align: right;
	padding-right: 5px;
	color: #E0E0E0;
}

